--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html{
 .header{
     /* border: solid black 5px; */
     height: 95vh;
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(../img/forest.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(./img/forest.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
